--- a/sass/style.scss
+++ b/sass/style.scss
@@ -117,8 +117,57 @@ body {
 
 .post-tags {
   display: flex;
-  
+
   p {
     margin: 0 10px 0 0;
   }
+}
+
+
+.tag-size-1 {
+  font-size: 100%;
+}
+
+.tag-size-2 {
+  font-size: 125%;
+}
+
+.tag-size-3 {
+  font-size: 150%;
+}
+
+.tag-size-4 {
+  font-size: 175%;
+}
+
+.tag-size-5 {
+  font-size: 200%;
+}
+
+.tag-size-6 {
+  font-size: 250%;
+}
+
+#number1 {
+  font-size: 100%;
+}
+
+#number2 {
+  font-size: 125%;
+}
+
+#number3 {
+  font-size: 150%;
+}
+
+#number4 {
+  font-size: 175%;
+}
+
+#number5 {
+  font-size: 200%;
+}
+
+#number6 {
+  font-size: 250%;
 }
